--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome#index</h1>
+<h1>Welcome to my healthy lifestyle blog</h1>
+<p>
+  This blog is dedicated to helping people who have Insulin resistance. It can be frustrating to to manage
+  this condition, but changes in diet and exercise can help you improve your condition over time. On this
+  site, you will find a series of exercise tips and recipes to help you reduce the effects.
+</p>
 <p><a href="/recipes/index">Recipies</a></p>
