Add changes to text in views

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,3 +5,4 @@
   site, you will find a series of exercise tips and recipes to help you reduce the effects.
 </p>
 <p><a href="/recipes/index">Recipies</a></p>
+<p><a href="/fitness/index">Fitness Hacks</a></p>
