--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,2 @@
-<h1>Recipes#index</h1>
-<p>
-  Below you will see some of my favorite healthy food recipes.
-</p>
-
-<%= target = "Hello World"%>
+<h1>Recipes</h1>
+<%= target = "Below you will see some of my favorite healthy food recipes"%>
