--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,6 @@
   this condition, but changes in diet and exercise can help you improve your condition over time. On this
   site, you will find a series of exercise tips and recipes to help you reduce the effects.
 </p>
-<p><a href="/recipes/index">Recipies</a></p>
-<p><a href="/fitness/index">Fitness Hacks</a></p>
+
+<%= link_to('Recipes', {:controller => 'recipes', :action => 'index'})%>
+<%= link_to('Fitness Hacks', {:controller => 'fitness', :action => 'index'}) %>
